--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,6 @@ build-backend = "hatchling.build"
 dev = [
     "flake8>=7.3.0",
     "pydata-sphinx-theme>=0.16.1",
+    "pytest>=9.0.2",
     "sphinx>=9.0.4",
 ]
