--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ fonttools==4.61.1
 idna==3.11
 imagesize==1.4.1
 immutabledict==4.2.2
+iniconfig==2.3.0
 ipykernel==7.1.0
 ipython==9.8.0
 ipython-pygments-lexers==1.1.1
@@ -47,6 +48,7 @@ parso==0.8.5
 pexpect==4.9.0
 pillow==12.0.0
 platformdirs==4.5.1
+pluggy==1.6.0
 prompt-toolkit==3.0.52
 protobuf==6.31.1
 psutil==7.2.0
@@ -58,6 +60,7 @@ pydata-sphinx-theme==0.16.1
 pyflakes==3.4.0
 pygments==2.19.2
 pyparsing==3.3.1
+pytest==9.0.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
