--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,25 @@ version = "0.1.0"
 description = "Python package for neutron spectrum unfolding from measurements obtained with Bonner Sphere Spectrometer (BSS)"
 readme = "README.md"
 authors = [
-    { name = "KonstantinJINR", email = "kchizhov@jinr.ru" }
+    { name = "Konstantin Chizhov", email = "kchizhov@jinr.ru" }
 ]
 requires-python = ">=3.12"
+
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
+]
+license = "GNU"
+license-files = ["LICENSE"]
+
+
 dependencies = [
     "cvxpy[cbc,cvxopt,ecos,glop,glpk]>=1.7.5",
     "matplotlib>=3.10.8",
     "numpy>=2.4.0",
     "pandas>=2.3.3",
     "scipy>=1.16.3",
+    "uv-build>=0.9.18",
 ]
 
 [project.scripts]
@@ -29,3 +39,7 @@ dev = [
     "pytest>=9.0.2",
     "sphinx>=9.0.4",
 ]
+
+[project.urls]
+Homepage = "https://github.com/Radiationsafety/bssunfold"
+Issues = "https://github.com/Radiationsafety/bssunfold/issues"
