--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
     "Operating System :: OS Independent",
-
+    "Topic :: Scientific/Engineering",
 ]
 license ="GPL-3.0-only"
 license-files = ["LICENSE"]
