--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,8 @@ dev = [
     "ruff>=0.14.10",
     "pandas-stubs>=2.3.3.251201",
     "plotly>=6.5.0",
+    "coverage>=7.13.1",
+    "codacy-coverage>=1.3.11",
 ]
 
 [project.urls]
