--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,7 +44,18 @@ jobs:
       run: |
         pytest
 
+    - name: Test with pytest and coverage
+      run: |
+        pytest --cov=src/your_package --cov-report=xml --cov-report=html
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
 
+
+
+  
     # - name: Export Marimo notebooks to HTML
     #   run: |
     #     python -m marimo export html ./example/02-marimo-notebook.py --output index.html
