--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Test with pytest and coverage
       run: |
-        pytest --cov=src/your_package --cov-report=xml --cov-report=html
+        pytest --cov=src/bssunfold --cov-report=xml --cov-report=html
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
