--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-absl-py==2.3.1
 accessible-pygments==0.0.5
 alabaster==1.0.0
+anyio==4.12.0
+appnope==0.1.4
 asttokens==3.0.1
 babel==2.17.0
 beautifulsoup4==4.14.3
@@ -8,50 +9,69 @@ certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 clarabel==0.11.1
+click==8.3.1
+codacy-coverage==1.3.11
 comm==0.2.3
 contourpy==1.3.3
+coverage==7.13.1
 cvxopt==1.3.2
 cvxpy==1.7.5
 cycler==0.12.1
-cylp==0.94.0
 debugpy==1.8.19
 decorator==5.2.1
+directory-tree==1.0.0
 docutils==0.22.4
 ecos==2.0.14
 executing==2.2.1
 flake8==7.3.0
 fonttools==4.61.1
+h11==0.16.0
+id==1.5.0
 idna==3.11
 imagesize==1.4.1
-immutabledict==4.2.2
 iniconfig==2.3.0
 ipykernel==7.1.0
-ipython==9.8.0
+ipython==9.9.0
 ipython-pygments-lexers==1.1.1
+itsdangerous==2.2.0
+jaraco-classes==3.4.0
+jaraco-context==6.0.2
+jaraco-functools==4.4.0
 jedi==0.19.2
 jinja2==3.1.6
 joblib==1.5.3
-jupyter-client==8.7.0
+jupyter-client==8.8.0
 jupyter-core==5.9.1
+keyring==25.7.0
 kiwisolver==1.4.9
+loro==1.10.3
+marimo==0.18.4
+markdown==3.10
+markdown-it-py==4.0.0
 markupsafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
 mccabe==0.7.0
+mdurl==0.1.2
+more-itertools==10.8.0
+msgspec==0.20.0
+narwhals==2.14.0
 nest-asyncio==1.6.0
+nh3==0.3.2
 numpy==2.4.0
-ortools==9.14.6206
 osqp==1.0.5
 packaging==25.0
 pandas==2.3.3
+pandas-stubs==2.3.3.251201
 parso==0.8.5
 pexpect==4.9.0
 pillow==12.0.0
+pip==25.3
 platformdirs==4.5.1
+plotly==6.5.0
 pluggy==1.6.0
 prompt-toolkit==3.0.52
-protobuf==6.31.1
-psutil==7.2.0
+psutil==7.2.1
 ptyprocess==0.7.0
 pure-eval==0.2.3
 pycodestyle==2.14.0
@@ -59,16 +79,24 @@ pycparser==2.23
 pydata-sphinx-theme==0.16.1
 pyflakes==3.4.0
 pygments==2.19.2
+pymdown-extensions==10.19.1
 pyparsing==3.3.1
 pytest==9.0.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pyyaml==6.0.3
 pyzmq==27.1.0
+readme-renderer==44.0
 requests==2.32.5
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.2.0
 roman-numerals==4.1.0
+ruff==0.14.10
 scipy==1.16.3
 scs==3.2.9
 setuptools==80.9.0
+shellingham==1.5.4
 six==1.17.0
 snowballstemmer==3.0.1
 soupsieve==2.8.1
@@ -80,9 +108,19 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
+starlette==0.50.0
+tomlkit==0.13.3
 tornado==6.5.4
 traitlets==5.14.3
+troml==0.4.1
+trove-classifiers==2025.12.1.14
+twine==6.2.0
+typer==0.21.0
+types-pytz==2025.2.0.20251108
 typing-extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
+uv-build==0.9.18
+uvicorn==0.40.0
 wcwidth==0.2.14
+websockets==15.0.1
