--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,9 +40,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+    # - name: Test with pytest
+    #   run: |
+    #     pytest
 
     - name: Test with pytest and coverage
       run: |
@@ -52,6 +52,7 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
+        token: ${{ secrets.CODACY_PROJECT_TOKEN }} 
 
 
 
