--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,11 +49,12 @@ jobs:
         pytest --cov=src/bssunfold --cov-report=xml --cov-report=html
     
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
-        token: ${{ secrets.CODACY_PROJECT_TOKEN }} 
-
+      env:
+        CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        CODECOV_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
 
   
