--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,6 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -40,36 +39,31 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    # - name: Test with pytest
-    #   run: |
-    #     pytest
-
+    
     - name: Test with pytest and coverage
       run: |
         pytest --cov=src/bssunfold --cov-report=xml --cov-report=html
     
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
+    - name: Upload coverage report as artifact
+      uses: actions/upload-artifact@v4
       with:
-        file: ./coverage.xml
-      env:
-        CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-        CODECOV_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        name: coverage-report
+        path: coverage.xml
 
-
-  
-    # - name: Export Marimo notebooks to HTML
-    #   run: |
-    #     python -m marimo export html ./example/02-marimo-notebook.py --output index.html
-    #     echo "Exporting marimo notebook to HTML..."
-          
-    # - name: Setup Pages
-    #   uses: actions/configure-pages@v4
-        
-    # - name: Upload artifact
-    #   uses: actions/upload-pages-artifact@v3
-    #   with:
-    #       # Загружаем все HTML файлы и создаем index.html по умолчанию
-    #       path: ./build/
-    #       # Или укажите конкретную папку:
-    #       # path: ./build/
+  codacy-coverage-reporter:
+    needs: build  # needs job 'build'
+    runs-on: ubuntu-latest
+    name: codacy-coverage-reporter
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Download coverage report
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-report
+      
+      - name: Run codacy-coverage-reporter
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: coverage.xml
