--- a/.github/workflows/deploy-marimo.yml
+++ b/.github/workflows/deploy-marimo.yml
@@ -31,17 +31,17 @@ jobs:
           python-version: '3.12'
       
       - name: Install marimo
-        run: uv pip install marimo
+        run: uv add marimo plotly bssunfold numpy pandas
       
       - name: Create output directory
         run: mkdir -p _site
       
       - name: Export marimo notebook
         run: |
-          marimo export html-wasm examples/02-marimo-notebook.py \
+          marimo export html-wasm ./examples/02-marimo-notebook.py \
             -o _site/index.html \
             --mode run \
-            --no-open
+            --no-show-code
       
       - name: Create .nojekyll
         run: touch _site/.nojekyll
