--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "coverage>=7.13.1",
     "codacy-coverage>=1.3.11",
     "radon>=6.0.1",
+    "grayskull>=2.9.2",
 ]
 
 [project.urls]
