--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dev = [
     "codacy-coverage>=1.3.11",
     "radon>=6.0.1",
     "grayskull>=2.9.2",
+    "codemetapy>=3.0.3",
 ]
 
 [project.urls]
