--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,28 +46,28 @@ bssunfold = "bssunfold:main"
 requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build]
-include = [
-     "src/bssunfold/**",
-    "README.md",
-    "LICENSE",
-]
+# [tool.hatch.build]
+# include = [
+#     "src/bssunfold/**",
+#     "README.md",
+#     "LICENSE",
+# ]
 
-exclude = [
-    "tests/**",
-    "assets/**",
-    "docs/**",
-    "favicon.ico",
-    "uv.lock",
-    "**/pycache",
-    "**/*.pyc",
-    "**/.git*",
-    "**/*.tmp",
-    "tests/**/*.dat",
-    "*.log",
-    "codemeta.json",
-    "conda.recipe/**",
-]
+# exclude = [
+#     "tests/**",
+#     "assets/**",
+#     "docs/**",
+#     "favicon.ico",
+#     "uv.lock",
+#     "**/pycache",
+#     "**/*.pyc",
+#     "**/.git*",
+#     "**/*.tmp",
+#     "tests/**/*.dat",
+#     "*.log",
+#     "codemeta.json",
+#     "conda.recipe/**",
+# ]
 
 [dependency-groups]
 dev = [
@@ -82,7 +82,7 @@ dev = [
     "directory-tree>=1.0.0",
     "marimo>=0.19.0",
     "ruff>=0.14.10",
-    "pandas-stubs>=2.3.3.251201",
+    "pandas-stubs>=2.2.3",
     "plotly>=6.5.0",
     "coverage>=7.13.1",
     "codacy-coverage>=1.3.11",
@@ -92,6 +92,7 @@ dev = [
     "deptry>=0.24.0",
     "jupyter-book>=2.1.0",
     "ghp-import>=2.1.0",
+    "ipywidgets>=8.1.8",
 ]
 
 [project.urls]
