--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "cvxpy[ecos]>=1.7.5",
     "matplotlib>=3.10.8",
     "numpy>=2.4.1",
+    "odl>=1.0.0b1",
     "pandas>=2.2.3",
     "pyzmq>=27.1.0",
     "scipy>=1.16.3",
